	PR rtl-optimization/35729 	* loop-invariant.c (check_maybe_invariant): Disallow volatile memory 	references.

* gcc.dg/pr35729.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@133755 138bc75d-0d04-0410-961f-82ee72b054a4